# axum-first

./: Cargo.toml
src/: main.rs
templates/users/view_users/: name.html
